AC_INIT([ckon], [0.0])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
AC_CONFIG_AUX_DIR(config)
m4_pattern_allow([AM_PROG_AR])
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AM_INIT_AUTOMAKE([-Wall no-define])
AC_PROG_CXX
AX_BOOST_BASE([1.50])
AX_BOOST_SYSTEM
AX_BOOST_FILESYSTEM
AX_BOOST_REGEX
AX_BOOST_PROGRAM_OPTIONS
LIBCURL_CHECK_CONFIG
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
